docs: 중간 개발 기록을 저장소 밖으로 옮기고 공개 문서를 정리한다
docs 아래 md 83개 가운데 39개를 private-reference 로 옮긴다. 옮기는 것은 특정 날짜의
팀 요청서, 한 번 쓰고 끝난 검증 증거와 일회성 운영 가이드, 세션별 테스트 관측 기록처럼
그때만 의미가 있던 기록이다. 공개 저장소에는 스펙과 지금도 유효한 운영 문서 46개가 남는다.

옮기려면 봉인 계약을 함께 연다. immutable_history_diff_errors 가 --diff-filter=MDT 로
삭제를 잡고 classify_markdown 이 docs 아래 md 를 전부 HISTORICAL_SUPERSEDED 로 보기
때문에, P1_CURRENT_MUTABLE_DOCUMENTS 에 없는 문서는 옮기는 순간 게이트가 막는다.
봉인의 목적은 증거를 다시 쓰지 못하게 하는 것이지 저장소 밖으로 내보내지 못하게 하는
것이 아니다.

남는 문서에서 굵게 표시 남용 441곳과 상투구를 걷어낸다. 코드 블록 안은 수식이라
손대지 않는다. 계약이 문구를 글자 그대로 단정하는 문서 하나는 되돌렸다 - 보기 좋으라고
계약을 고칠 자리가 아니다.

CLAUDE.md 를 지우고 AGENTS.md 를 641줄에서 97줄로 줄인다. 작업 규칙은 AGENTS.md 가
단일 진실 소스이고 전문은 저장소 밖에 둔다. .mailmap 으로 Contributors 를 5명에서
실제 인원 3명으로 맞춘다. 한 사람이 이메일 두 개로 커밋해 생긴 중복이었고 이력에
다른 흔적은 없었다.

README 에 팀 3인 분담과 이미지만으로 실행하는 절차를 넣는다. 처음 실행하기에는
준비물, 첫 실행 소요 시간, 비밀번호 확인 명령, 시연 스택, 종료 방법을 적는다.

기록: contracts/changes/20260919-docs-private-reference-relocation.md